--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </section>
           <section>
             <h2>PLAYLIST</h2>
-            <a href="">Crea Playlist</a>
+            <a href=""><i class="fas fa-plus-square"></i>Crea Playlist</a>
           </section>
           <section class="main-nav-main">
             <ul class="playlist">
@@ -66,7 +66,28 @@
             <div class="album"></div>
             <div class="album"></div>
           </div>
+          <div class="recently-played">
+            <h2>Recently played</h2>
+            <p>Lorem sasghjkm</p>
+          </div>
+          <div class="container-flex-mix">
+            <div class="mix"></div>
+            <div class="mix"></div>
+          </div>
+          <h2>Recently played</h2>
+          <p>Lorem sasghjkm</p>
+          <div class="container-flex-mix">
+            <div class="mix"></div>
+            <div class="mix"></div>
+          </div>
+          <h2>Recently played</h2>
+          <p>Lorem sasghjkm</p>
+          <div class="container-flex-mix">
+            <div class="mix"></div>
+            <div class="mix"></div>
+          </div>
         </section>
+       </div>
       </main>
       <!-- /main -->
 
