--- a/index.html
+++ b/index.html
@@ -13,18 +13,26 @@
       <!-- main -->
       <main class="main">
         <section class="main-nav">
+          <!-- main-nav-header -->
           <section class="main-nav-header">
-            <ul>
-              <li class="logo"><i class="fab fa-spotify"></i>Spotify</li>
-              <li><i class="fas fa-home"></i>Home</li>
-              <li><i class="fas fa-search"></i>Cerca</li>
-              <li>La tua libreria</li>
+            <h2><i class="fab fa-spotify"></i>Spotify</h2>
+            <ul class="menu-spotify">
+              <li><a href="#"><i class="fas fa-home"></i>Home</a></li>
+              <li><a href="#"><i class="fas fa-search"></i>Cerca</a></li>
+              <li><a href="#"><i class="far fa-bookmark"></i> La tua libreria</a></li>
             </ul>
           </section>
-          <section>
-            <h2>PLAYLIST</h2>
-            <a href=""><i class="fas fa-plus-square"></i>Crea Playlist</a>
+          <!-- /main-nav-header -->
+          <!-- crea-lista -->
+          <section class="crea-lista">
+            <div class="title-playlist">
+              <h3>PLAYLIST</h3>
+               <i class="fas fa-plus-square"></i>
+               <a href="#">Crea playlist</a>
+            </div>
           </section>
+          <!-- /crea-lista -->
+          <!-- main-nav-main -->
           <section class="main-nav-main">
             <ul class="playlist">
               <li>Nome Playlist</li>
@@ -37,8 +45,18 @@
               <li>Nome Playlist</li>
             </ul>
           </section>
+        <!-- /main-nav-main -->
+        <!-- main-nav-footer -->
           <section class="main-nav-footer">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+           <div class="container-nav-footer">
+            <div class="margin-navfooter-10">
+              <i class="fas fa-arrow-circle-down"></i><p> install app</p>
+            </div>
+            <hr class="linea-nav-footer">
+            <div class="margin-navfooter-10">
+              <i class="fas fa-user-circle"></i><h4> Jonh Doe</h4>
+            </div>
+           </div>
           </section>
         </section>
         <section class="main-content">
@@ -59,35 +77,58 @@
             <h2>Recently played</h2>
           </div>
           <div class="container-flex-song">
-            <div class="album"></div>
-            <div class="album"></div>
-            <div class="album"></div>
-            <div class="album"></div>
-            <div class="album"></div>
-            <div class="album"></div>
+            <div class="album">
+             <div class="in"></div>
+            </div>
+            <div class="album">
+              <div class="in"></div>
+            </div>
+            <div class="album">
+              <div class="in"></div>
+            </div>
+            <div class="album">
+              <div class="in"></div>
+            </div>
+            <div class="album">
+              <div class="in"></div>
+            </div>
+            <div class="album">
+              <div class="in"></div>
+            </div>
           </div>
           <div class="recently-played">
             <h2>Recently played</h2>
             <p>Lorem sasghjkm</p>
           </div>
           <div class="container-flex-mix">
-            <div class="mix"></div>
-            <div class="mix"></div>
+            <div class="album">
+              <div class="in"></div>
+            </div>
+            <div class="album">
+              <div class="in"></div>
+            </div>
           </div>
           <h2>Recently played</h2>
           <p>Lorem sasghjkm</p>
           <div class="container-flex-mix">
-            <div class="mix"></div>
-            <div class="mix"></div>
+            <div class="album">
+              <div class="in"></div>
+            </div>
+            <div class="album">
+              <div class="in"></div>
+            </div>
           </div>
           <h2>Recently played</h2>
           <p>Lorem sasghjkm</p>
           <div class="container-flex-mix">
-            <div class="mix"></div>
-            <div class="mix"></div>
+            <div class="album">
+              <div class="in"></div>
+            </div>
+            <div class="album">
+              <div class="in"></div>
+            </div>
           </div>
         </section>
-       </div>
       </main>
       <!-- /main -->
 
