--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </section>
         <section class="main-content">
           <div class="call-to-action">
-            <a class="btn" href="">Lorem ipsum dolor sit.</a>
+            <a class="btn" href="">effettua l'upgrade</a>
           </div>
           <div class="main-top">
             <ul class="lista-main-top">
