--- a/index.html
+++ b/index.html
@@ -78,22 +78,35 @@
           </div>
           <div class="container-flex-song">
             <div class="album">
-             <div class="in"></div>
+              <div class="in">
+                <img src="img/metal_lifting.jpg" alt="">
+              </div>
             </div>
             <div class="album">
-              <div class="in"></div>
+              <div class="in">
+                <img src="img/stranger.jpeg" alt="">
+              </div>
             </div>
             <div class="album">
-              <div class="in"></div>
+              <div class="in">
+                <img src="img/aquietplace.jpeg" alt="">
+              </div>
             </div>
             <div class="album">
-              <div class="in"></div>
+              <div class="in">
+                <img src="img/split.jpeg" alt="">
+              </div>
             </div>
             <div class="album">
-              <div class="in"></div>
+              <div class="in">
+                <img src="img/cure.jpeg" alt="">
+                <i class="fas fa-plus"></i>
+              </div>
             </div>
             <div class="album">
-              <div class="in"></div>
+              <div class="in">
+                <img src="img/sinister.jpeg" alt="">
+              </div>
             </div>
           </div>
           <div class="recently-played">
@@ -108,8 +121,10 @@
               <div class="in"></div>
             </div>
           </div>
+          <div class="recently-played">
           <h2>Recently played</h2>
           <p>Lorem sasghjkm</p>
+          </div>
           <div class="container-flex-mix">
             <div class="album">
               <div class="in"></div>
@@ -118,8 +133,10 @@
               <div class="in"></div>
             </div>
           </div>
+          <div class="recently-played">
           <h2>Recently played</h2>
           <p>Lorem sasghjkm</p>
+          </div>
           <div class="container-flex-mix">
             <div class="album">
               <div class="in"></div>
