--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <!-- font-awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
+    <!-- gooogle font -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <title>Spotify</title>
   </head>
   <body>
@@ -17,9 +20,15 @@
           <section class="main-nav-header">
             <h2><i class="fab fa-spotify"></i>Spotify</h2>
             <ul class="menu-spotify">
-              <li><a href="#"><i class="fas fa-home"></i>Home</a></li>
-              <li><a href="#"><i class="fas fa-search"></i>Cerca</a></li>
-              <li><a href="#"><i class="far fa-bookmark"></i> La tua libreria</a></li>
+              <li>
+                <a href="#"><i class="fas fa-home"></i>Home</a>
+              </li>
+              <li>
+                <a href="#"><i class="fas fa-search"></i>Cerca</a>
+              </li>
+              <li>
+                <a href="#"><i class="far fa-bookmark"></i> La tua libreria</a>
+              </li>
             </ul>
           </section>
           <!-- /main-nav-header -->
@@ -27,8 +36,8 @@
           <section class="crea-lista">
             <div class="title-playlist">
               <h3>PLAYLIST</h3>
-               <i class="fas fa-plus-square"></i>
-               <a href="#">Crea playlist</a>
+              <i class="fas fa-plus-square"></i>
+              <a href="#">Crea playlist</a>
             </div>
           </section>
           <!-- /crea-lista -->
@@ -48,15 +57,16 @@
         <!-- /main-nav-main -->
         <!-- main-nav-footer -->
           <section class="main-nav-footer">
-           <div class="container-nav-footer">
-            <div class="margin-navfooter-10">
-              <i class="fas fa-arrow-circle-down"></i><p> install app</p>
+            <div class="container-nav-footer">
+             <div class="margin-navfooter-10">
+               <i class="fas fa-arrow-circle-down"></i>
+               <p> install app</p>
+             </div>
+              <hr class="linea-nav-footer">
+             <div class="margin-navfooter-10">
+               <i class="fas fa-user-circle"></i><h4> Jonh Doe</h4>
+             </div>
             </div>
-            <hr class="linea-nav-footer">
-            <div class="margin-navfooter-10">
-              <i class="fas fa-user-circle"></i><h4> Jonh Doe</h4>
-            </div>
-           </div>
           </section>
         </section>
         <section class="main-content">
@@ -80,69 +90,92 @@
             <div class="album">
               <div class="in">
                 <img src="img/metal_lifting.jpg" alt="">
+                <i class="far fa-play-circle"></i>
+                <a href="">Heavy Metal</a>
+                <p>Subtitle</p>
               </div>
             </div>
             <div class="album">
               <div class="in">
                 <img src="img/stranger.jpeg" alt="">
+                <i class="far fa-play-circle"></i>
+                <a href="">Stranger Things, Vol.1(a Netflix Original Series Soundtrack)</a>
+                <p>Kyle Dixon & Michael Stein</p>
               </div>
             </div>
             <div class="album">
               <div class="in">
                 <img src="img/aquietplace.jpeg" alt="">
+                <i class="far fa-play-circle"></i>
+                <a href="">A quiet place</a>
+                <p>Subtitle</p>
               </div>
             </div>
             <div class="album">
               <div class="in">
                 <img src="img/split.jpeg" alt="">
+                <i class="far fa-play-circle"></i>
+                <a href="">Split</a>
+                <p>Subtitle</p>
               </div>
             </div>
             <div class="album">
               <div class="in">
                 <img src="img/cure.jpeg" alt="">
-                <i class="fas fa-plus"></i>
+                <i class="far fa-play-circle"></i>
+                <a href="">A cure for wellness</a>
+                <p>Subtitle</p>
               </div>
             </div>
             <div class="album">
               <div class="in">
                 <img src="img/sinister.jpeg" alt="">
+                <i class="far fa-play-circle"></i>
+                <a href="">Sinister</a>
+                <p>Subtitle</p>
               </div>
             </div>
           </div>
           <div class="recently-played">
-            <h2>Recently played</h2>
-            <p>Lorem sasghjkm</p>
+            <h2>Creato per John Doe</h2>
+            <p>Più ascolti, più accurati saranno i suggerimenti</p>
           </div>
-          <div class="container-flex-mix">
+          <div class="container-flex-song">
             <div class="album">
-              <div class="in"></div>
+              <div class="in">
+                <img src="img/radar.jpeg" alt="">
+                <i class="far fa-play-circle"></i>
+              <a href="">Release Radar</a>
+            </div>
             </div>
             <div class="album">
-              <div class="in"></div>
+              <div class="in">
+                <img src="img/mixdaily.jpeg" alt="">
+                <i class="far fa-play-circle"></i>
+              <a href="">Dally Mix 1</a>
             </div>
-          </div>
-          <div class="recently-played">
-          <h2>Recently played</h2>
-          <p>Lorem sasghjkm</p>
-          </div>
-          <div class="container-flex-mix">
-            <div class="album">
-              <div class="in"></div>
-            </div>
-            <div class="album">
-              <div class="in"></div>
             </div>
           </div>
           <div class="recently-played">
-          <h2>Recently played</h2>
-          <p>Lorem sasghjkm</p>
+          <h2>Artisti più popolari</h2>
+          <p>Più ascolti, più accurati saranno i suggerimenti</p>
           </div>
-          <div class="container-flex-mix">
+          <div class="container-flex-song">
             <div class="album">
-              <div class="in"></div>
+              <div class="in">
+                <img src="img/youg.jpeg" alt="">
+                <i class="far fa-play-circle"></i>
+               <a href="">Forum</a>
+               <p>Subtitle</p>
+            </div>
             </div>
             <div class="album">
-              <div class="in"></div>
+              <div class="in">
+                <img src="img/einaudi.jpeg" alt="">
+                <i class="far fa-play-circle"></i>
+              <a href="">Relax</a>
+              <p>Subtitle</p>
+            </div>
             </div>
           </div>
         </section>
