--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
           <!-- main-nav-main -->
           <section class="main-nav-main">
             <ul class="playlist">
-              <li>Nome Playlist</li>
-              <li>Nome Playlist</li>
-              <li>Nome Playlist</li>
-              <li>Nome Playlist</li>
-              <li>Nome Playlist</li>
-              <li>Nome Playlist</li>
-              <li>Nome Playlist</li>
-              <li>Nome Playlist</li>
+              <li><a href="">Nome Playlist</a></li>
+              <li><a href="">Nome Playlist</a></li>
+              <li><a href="">Nome Playlist</a></li>
+              <li><a href="">Nome Playlist</a></li>
+              <li><a href="">Nome Playlist</a></li>
+              <li><a href="">Nome Playlist</a></li>
+              <li><a href="">Nome Playlist</a></li>
+              <li><a href="">Nome Playlist</a></li>
             </ul>
           </section>
         <!-- /main-nav-main -->
@@ -75,12 +75,12 @@
           </div>
           <div class="main-top">
             <ul class="lista-main-top">
-              <li>in evidenza</li>
-              <li>podcast</li>
-              <li>classifiche</li>
-              <li>generi e mood</li>
-              <li>nuove uscite</li>
-              <li>scopri</li>
+              <li><a href="">in evidenza</a></li>
+              <li><a href="">podcast</a></li>
+              <li><a href="">classifiche</a></li>
+              <li><a href="">generi e mood</a></li>
+              <li><a href="">nuove uscite</a></li>
+              <li><a href="">scopri</a></li>
             </ul>
           </div>
           <div class="recently-played">
@@ -163,7 +163,7 @@
           <div class="container-flex-song">
             <div class="album">
               <div class="in">
-                <img src="img/youg.jpeg" alt="">
+                <img class="img-circle"src="img/youg.jpeg" alt="">
                 <i class="far fa-play-circle"></i>
                <a href="">Forum</a>
                <p>Subtitle</p>
@@ -171,10 +171,10 @@
             </div>
             <div class="album">
               <div class="in">
-                <img src="img/einaudi.jpeg" alt="">
-                <i class="far fa-play-circle"></i>
-              <a href="">Relax</a>
-              <p>Subtitle</p>
+               <img class="img-circle" src="img/einaudi.jpeg" alt="">
+               <i class="far fa-play-circle"></i>
+               <a href="">Relax</a>
+               <p>Subtitle</p>
             </div>
             </div>
           </div>
