--- a/index.html
+++ b/index.html
@@ -184,6 +184,59 @@
 
       <!-- footer -->
       <footer class="footer">
+        <!-- box-footer-left -->
+        <section class="box-footer-left">
+          <div class="brano-nome">
+            <img src="img/sinister.jpeg" alt="">
+          </div>
+          <div class="text-brano-nome">
+            <h3>Sinister</h3>
+            <h5>Brano nome</h5>
+          </div>
+          <div class="icon-footer">
+            <i class="far fa-heart"></i>
+            <i class="far fa-folder"></i>
+          </div>
+        </section>
+        <!-- /box-footer-left -->
+        <!-- box-footer-center -->
+         <section class="box-footer-center">
+           <div class="icon-player">
+             <i class="fas fa-redo-alt icons"></i>
+             <i class="fas fa-step-backward icons"></i>
+             <i class="far fa-play-circle action-play"></i>
+             <i class="fas fa-step-forward icons"></i>
+             <i class="fas fa-redo-alt icons"></i>
+           </div>
+           <div class="footer-center-bottom">
+             <div class="box-line-bar">
+               <div class="line-bar-footer">
+               <div class="line-bar-ball"></div>
+               </div>
+             </div>
+             <div class="minute">
+               <span class="minute-left">1:50</span>
+               <span class="minute-right">4:35</span>
+             </div>
+           </div>
+         </section>
+         <!-- /box-footer-center -->
+         <!-- box-footer-right -->
+         <section class="box-footer-right">
+           <div class="footer-right">
+             <div class="icons-footer-right">
+               <i class="fas fa-sliders-h"></i>
+               <i class="fas fa-tv"></i>
+               <i class="fas fa-volume-up"></i>
+             </div>
+             <div class="box-line-right">
+               <div class="line-bar-footer-right">
+                <div class="line-bar-ball-right"></div>
+               </div>
+             </div>
+           </div>
+         </section>
+         <!-- /box-footer-right -->
 
       </footer>
       <!-- /footer -->
